--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,10 @@ body {
     font-family: "Inter", sans-serif;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 .card {
     margin: auto;
     background-color: rgb(240, 240, 240);
     height: 80vh;
-    width: 400px;
-    padding: 20px;
+    max-width: 400px;
+    padding: 30px 20px 30px 20px;
 }
