--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ body {
 }
 
 .card {
+    @apply bg-gray-100 rounded-md;
     margin: auto;
-    background-color: rgb(240, 240, 240);
     height: 80vh;
     max-width: 400px;
     padding: 30px 20px 30px 20px;
