--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
     @apply bg-gray-100 rounded-md;
     margin: auto;
     height: 80vh;
-    max-width: 400px;
+    max-width: 360px;
     padding: 30px 20px 30px 20px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
